src/App/styles.less
@import (inline, once, css) '~stremio-colors/css/stremio-colors.css';
@import (inline, once, css) '~stremio/common/roboto.css';
@import (reference) '~stremio/common/screen-sizes.less';

:global {
    @import (once, less) '~stremio-router/styles.css';
}

:root {
    --landscape-shape-ratio: 0.5625;
    --poster-shape-ratio: 1.464;
    --scroll-bar-width: 6px;
    --focus-outline-size: 2px;
    --color-facebook: #4267b2;
    --color-placeholderbackground: #606060;
    --color-placeholdersurface: #808080;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-size: 1rem;
    line-height: 1.2em;
    font-family: inherit;
    border: none;
    outline: none;
    list-style: none;
    user-select: none;
    text-decoration: none;
    appearance: none;
    background: none;
    box-shadow: none;
    overflow: hidden;
    word-break: break-word;
    scrollbar-width: thin;
    scrollbar-color: var(--color-secondarylighter80) var(--color-backgroundlight);
}

::-webkit-scrollbar {
    width: var(--scroll-bar-width);
}

::-webkit-scrollbar-thumb {
    background-color: var(--color-secondarylighter80);
}

::-webkit-scrollbar-track {
    background-color: var(--color-backgroundlight);
}

html, body, :global(#app) {
    position: relative;
    z-index: 0;
    width: 100vw;
    height: 100vh;
    min-width: 800px;
    min-height: 600px;
    font-family: 'Roboto', 'sans-serif';
    overflow: auto;

    .router {
        width: 100%;
        height: 100%;
    }

    .app-loader {
        width: 100%;
        height: 100%;
        background-color: var(--color-background);
    }
}

@media only screen and (min-width: @xxlarge) {
    html {
        font-size: 18px;
    }
}

@media only screen and (max-width: @xxlarge) {
    html {
        font-size: 16px;
    }
}

@media only screen and (max-width: @large) {
    html {
        font-size: 15px;
    }
}

@media only screen and (max-width: @medium) {
    html {
        font-size: 14px;
    }
}

